--- a/package.json
+++ b/package.json
@@ -48,7 +48,21 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/eslint-parser": "^7.27.1",
+    "@babel/preset-react": "^7.27.1",
+    "@cspell/eslint-plugin": "^8.19.3",
     "@types/react-router-dom": "^5.3.3",
-    "globals": "^16.0.0"
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-spellcheck": "^0.0.20",
+    "eslint-plugin-write-good-comments": "^0.2.0",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3"
   }
 }
